--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,16 @@ volumes:
     driver: local
 services:
   langgraph-redis:
-    image: docker.io/redis:6
+    image: redis:6.2.18-alpine
+    ports:
+      - "6379:6379"
     healthcheck:
       test: redis-cli ping
       interval: 5s
       timeout: 1s
       retries: 5
   langgraph-postgres:
-    image: docker.io/postgres:16
+    image: postgres:16
     ports:
       - "5433:5432"
     environment:
@@ -34,8 +36,6 @@ services:
         condition: service_healthy
       langgraph-postgres:
         condition: service_healthy
-    environment:
-      GEMINI_API_KEY: ${GEMINI_API_KEY}
-      LANGSMITH_API_KEY: ${LANGSMITH_API_KEY}
-      REDIS_URI: redis://langgraph-redis:6379
-      POSTGRES_URI: postgres://postgres:postgres@langgraph-postgres:5432/postgres?sslmode=disable
+    env_file:
+      - .env
+      
